--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -13,6 +13,7 @@ set_real_ip_from 103.208.86.5;
 set_real_ip_from 103.251.167.10;
 set_real_ip_from 103.251.167.20;
 set_real_ip_from 103.28.52.93;
+set_real_ip_from 103.60.12.38;
 set_real_ip_from 104.192.3.74;
 set_real_ip_from 104.219.236.100;
 set_real_ip_from 104.244.72.115;
@@ -66,6 +67,7 @@ set_real_ip_from 107.189.4.12;
 set_real_ip_from 107.189.4.209;
 set_real_ip_from 107.189.5.121;
 set_real_ip_from 107.189.5.188;
+set_real_ip_from 107.189.5.249;
 set_real_ip_from 107.189.5.7;
 set_real_ip_from 107.189.6.124;
 set_real_ip_from 107.189.7.141;
@@ -197,7 +199,6 @@ set_real_ip_from 176.65.149.100;
 set_real_ip_from 176.65.149.105;
 set_real_ip_from 176.65.149.84;
 set_real_ip_from 176.65.149.87;
-set_real_ip_from 176.65.149.88;
 set_real_ip_from 176.65.149.96;
 set_real_ip_from 176.97.114.202;
 set_real_ip_from 177.93.140.66;
@@ -238,6 +239,7 @@ set_real_ip_from 185.100.87.166;
 set_real_ip_from 185.100.87.174;
 set_real_ip_from 185.100.87.41;
 set_real_ip_from 185.10.16.41;
+set_real_ip_from 185.104.120.10;
 set_real_ip_from 185.104.120.30;
 set_real_ip_from 185.104.120.40;
 set_real_ip_from 185.106.102.102;
@@ -1024,6 +1026,7 @@ set_real_ip_from 2605:6400:30:ed0c:b477:4972:756a:2f42;
 set_real_ip_from 2605:6400:30:edc3::34;
 set_real_ip_from 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 set_real_ip_from 2605:6400:30:efba:dead::;
+set_real_ip_from 2605:6400:30:f04d:2605:6400:30:30;
 set_real_ip_from 2605:6400:30:f05d:c272:5525:72b1:e64c;
 set_real_ip_from 2605:6400:30:f060:be62:b857:b818:9144;
 set_real_ip_from 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -1298,7 +1301,6 @@ set_real_ip_from 2a05:541:112:31::1;
 set_real_ip_from 2a05:b0c7:6388::1;
 set_real_ip_from 2a05:b0c7:655b::1;
 set_real_ip_from 2a05:b0c7:67c6::1;
-set_real_ip_from 2a05:b0c7:6949::1;
 set_real_ip_from 2a05:b0c7:6bd4::1;
 set_real_ip_from 2a05:b0c7:6cc4::1;
 set_real_ip_from 2a06:1280:bee1:2::ee12:230;
@@ -1310,6 +1312,7 @@ set_real_ip_from 2a06:1700:2:148::8493:bcd8;
 set_real_ip_from 2a06:1700:3:19::1;
 set_real_ip_from 2a06:1700:3:34::1;
 set_real_ip_from 2a06:1700:4:14::1;
+set_real_ip_from 2a06:3000::10;
 set_real_ip_from 2a06:3000::30;
 set_real_ip_from 2a06:3000::40;
 set_real_ip_from 2a06:d380:0:103::62;
@@ -1537,7 +1540,11 @@ set_real_ip_from 2a0e:97c0:3e3:460:1337:b01b:1337:2;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b02b:1337:3;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b03b:1337:4;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b04b:1337:5;
+set_real_ip_from 2a0e:97c0:3e3:460:1337:b05b:1337:6;
+set_real_ip_from 2a0e:97c0:3e3:460:1337:b10b:1337:8;
+set_real_ip_from 2a0e:97c0:3e3:460:1337:b20b:1337:9;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b30b:1337:10;
+set_real_ip_from 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 set_real_ip_from 2a0e:97c0:3e3:a0e::1;
 set_real_ip_from 2a0e:97c0:3ea:882::1;
 set_real_ip_from 2a0e:97c0:470::28;
@@ -1661,6 +1668,10 @@ set_real_ip_from 35.0.127.52;
 set_real_ip_from 35.238.22.92;
 set_real_ip_from 35.246.109.178;
 set_real_ip_from 37.114.50.124;
+set_real_ip_from 37.114.50.142;
+set_real_ip_from 37.114.50.18;
+set_real_ip_from 37.114.50.27;
+set_real_ip_from 37.114.63.5;
 set_real_ip_from 37.120.239.59;
 set_real_ip_from 37.187.5.192;
 set_real_ip_from 37.221.208.71;
@@ -1690,6 +1701,7 @@ set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.13.225.69;
 set_real_ip_from 45.13.225.78;
+set_real_ip_from 45.133.74.53;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.135.180.12;
 set_real_ip_from 45.137.70.158;
@@ -1805,7 +1817,6 @@ set_real_ip_from 46.250.243.29;
 set_real_ip_from 46.30.188.218;
 set_real_ip_from 46.38.243.210;
 set_real_ip_from 50.7.40.39;
-set_real_ip_from 5.101.82.67;
 set_real_ip_from 5.101.84.151;
 set_real_ip_from 5.104.84.183;
 set_real_ip_from 5.104.86.6;
