--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -128,6 +128,7 @@ allow 130.193.10.21;
 allow 130.193.15.186;
 allow 130.193.15.79;
 allow 131.72.79.38;
+allow 135.125.239.70;
 allow 136.244.111.163;
 allow 138.59.18.110;
 allow 139.162.90.140;
@@ -199,6 +200,7 @@ allow 176.65.149.100;
 allow 176.65.149.105;
 allow 176.65.149.84;
 allow 176.65.149.87;
+allow 176.65.149.88;
 allow 176.65.149.96;
 allow 176.97.114.202;
 allow 177.93.140.66;
@@ -667,6 +669,7 @@ allow 2001:41d0:601:1100::6524;
 allow 2001:41d0:601:1100::71bb;
 allow 2001:41d0:700:10a2::;
 allow 2001:41d0:701:1000::5196;
+allow 2001:41d0:701:1100::57d3;
 allow 2001:41d0:805:d300::2b19:1929;
 allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
@@ -881,6 +884,7 @@ allow 209.141.40.68;
 allow 209.141.45.141;
 allow 209.141.45.81;
 allow 209.141.46.203;
+allow 209.141.51.180;
 allow 209.141.51.30;
 allow 209.141.54.203;
 allow 209.141.54.218;
@@ -975,6 +979,7 @@ allow 2402:1f00:8100:400::9;
 allow 2407:3640:2207:8882::1;
 allow 2407:3640:2259:6302::1;
 allow 2407:3641:2259:8208::1;
+allow 24.240.72.170;
 allow 2.56.10.36;
 allow 2.58.56.220;
 allow 2.58.56.35;
@@ -1225,6 +1230,7 @@ allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:1:185:246:84:179:1;
 allow 2a00:fbe4:1ab:ffff::133;
 allow 2a01:270:9847::1;
+allow 2a01:4f8:c0c:7611::1;
 allow 2a01:4f9:2b:75d::124:148;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
@@ -1301,6 +1307,7 @@ allow 2a05:541:112:31::1;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:655b::1;
 allow 2a05:b0c7:67c6::1;
+allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6cc4::1;
 allow 2a06:1280:bee1:2::ee12:230;
@@ -1735,7 +1742,6 @@ allow 45.141.215.56;
 allow 45.141.215.61;
 allow 45.141.215.62;
 allow 45.141.215.63;
-allow 45.141.215.76;
 allow 45.141.215.80;
 allow 45.141.215.88;
 allow 45.141.215.90;
@@ -1817,6 +1823,7 @@ allow 46.250.243.29;
 allow 46.30.188.218;
 allow 46.38.243.210;
 allow 50.7.40.39;
+allow 5.101.82.67;
 allow 5.101.84.151;
 allow 5.104.84.183;
 allow 5.104.86.6;
@@ -1977,6 +1984,7 @@ allow 93.99.104.18;
 allow 93.99.104.194;
 allow 93.99.104.40;
 allow 94.102.51.15;
+allow 94.130.26.133;
 allow 94.142.241.194;
 allow 94.142.244.16;
 allow 94.156.152.234;
