--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -15,6 +15,7 @@ allow 2001:41d0:601:1100::6524;
 allow 2001:41d0:601:1100::71bb;
 allow 2001:41d0:700:10a2::;
 allow 2001:41d0:701:1000::5196;
+allow 2001:41d0:701:1100::57d3;
 allow 2001:41d0:805:d300::2b19:1929;
 allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
@@ -363,6 +364,7 @@ allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:1:185:246:84:179:1;
 allow 2a00:fbe4:1ab:ffff::133;
 allow 2a01:270:9847::1;
+allow 2a01:4f8:c0c:7611::1;
 allow 2a01:4f9:2b:75d::124:148;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
@@ -439,6 +441,7 @@ allow 2a05:541:112:31::1;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:655b::1;
 allow 2a05:b0c7:67c6::1;
+allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6cc4::1;
 allow 2a06:1280:bee1:2::ee12:230;
