--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -450,6 +450,7 @@ allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:47::166;
 allow 2a06:1700:0:50::11;
 allow 2a06:1700:2:148::8493:bcd8;
+allow 2a06:1700:2:1a1::6dc4:997c;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
