--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -450,6 +450,7 @@ deny 2a06:1700:0:3c::1;
 deny 2a06:1700:0:47::166;
 deny 2a06:1700:0:50::11;
 deny 2a06:1700:2:148::8493:bcd8;
+deny 2a06:1700:2:1a1::6dc4:997c;
 deny 2a06:1700:3:19::1;
 deny 2a06:1700:3:34::1;
 deny 2a06:1700:4:14::1;
