--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -3,6 +3,7 @@ allow 102.130.113.9;
 allow 102.130.117.167;
 allow 102.130.127.117;
 allow 102.211.56.12;
+allow 102.211.56.200;
 allow 103.109.101.105;
 allow 103.146.203.11;
 allow 103.164.54.199;
@@ -87,7 +88,6 @@ allow 108.61.189.136;
 allow 109.104.153.22;
 allow 109.169.33.163;
 allow 109.228.160.190;
-allow 109.69.67.17;
 allow 109.70.100.1;
 allow 109.70.100.2;
 allow 109.70.100.3;
@@ -128,7 +128,6 @@ allow 130.193.10.21;
 allow 130.193.15.186;
 allow 130.193.15.79;
 allow 131.72.79.38;
-allow 135.125.239.70;
 allow 136.244.111.163;
 allow 138.59.18.110;
 allow 139.162.90.140;
@@ -602,6 +601,7 @@ allow 193.41.226.117;
 allow 194.15.112.133;
 allow 194.15.113.118;
 allow 194.15.115.212;
+allow 194.15.36.117;
 allow 194.163.157.49;
 allow 194.26.192.77;
 allow 194.53.137.156;
@@ -669,7 +669,6 @@ allow 2001:41d0:601:1100::6524;
 allow 2001:41d0:601:1100::71bb;
 allow 2001:41d0:700:10a2::;
 allow 2001:41d0:701:1000::5196;
-allow 2001:41d0:701:1100::57d3;
 allow 2001:41d0:805:d300::2b19:1929;
 allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
@@ -1238,7 +1237,6 @@ allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
-allow 2a02:16d0:0:5::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
 allow 2a02:4780:2d:ea47::1;
@@ -1663,6 +1661,7 @@ allow 2a12:a800:9:1:193:26:115:43;
 allow 2a12:a800:9:1:193:26:115:61;
 allow 2a12:de40:21:1be4::;
 allow 2c0f:6c0:0:2::6983;
+allow 2c0f:6c0:0:d::d28b;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
@@ -1697,6 +1696,7 @@ allow 38.135.24.32;
 allow 38.135.24.33;
 allow 38.135.24.72;
 allow 38.135.25.2;
+allow 38.180.204.182;
 allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
@@ -1871,7 +1871,6 @@ allow 57.129.91.235;
 allow 5.8.18.46;
 allow 5.8.18.99;
 allow 62.171.137.169;
-allow 62.182.84.146;
 allow 62.72.47.105;
 allow 64.190.76.2;
 allow 64.190.76.3;
@@ -1906,6 +1905,7 @@ allow 80.94.92.92;
 allow 81.16.33.42;
 allow 81.17.28.95;
 allow 81.181.104.22;
+allow 82.118.248.205;
 allow 82.153.138.125;
 allow 82.153.138.241;
 allow 82.221.128.191;
@@ -1915,6 +1915,7 @@ allow 82.29.128.140;
 allow 82.29.153.76;
 allow 83.147.17.190;
 allow 83.217.9.73;
+allow 83.228.94.69;
 allow 83.96.213.63;
 allow 83.97.20.77;
 allow 84.16.224.227;
