--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -3,6 +3,7 @@ set_real_ip_from 102.130.113.9;
 set_real_ip_from 102.130.117.167;
 set_real_ip_from 102.130.127.117;
 set_real_ip_from 102.211.56.12;
+set_real_ip_from 102.211.56.200;
 set_real_ip_from 103.109.101.105;
 set_real_ip_from 103.146.203.11;
 set_real_ip_from 103.164.54.199;
@@ -87,7 +88,6 @@ set_real_ip_from 108.61.189.136;
 set_real_ip_from 109.104.153.22;
 set_real_ip_from 109.169.33.163;
 set_real_ip_from 109.228.160.190;
-set_real_ip_from 109.69.67.17;
 set_real_ip_from 109.70.100.1;
 set_real_ip_from 109.70.100.2;
 set_real_ip_from 109.70.100.3;
@@ -128,7 +128,6 @@ set_real_ip_from 130.193.10.21;
 set_real_ip_from 130.193.15.186;
 set_real_ip_from 130.193.15.79;
 set_real_ip_from 131.72.79.38;
-set_real_ip_from 135.125.239.70;
 set_real_ip_from 136.244.111.163;
 set_real_ip_from 138.59.18.110;
 set_real_ip_from 139.162.90.140;
@@ -602,6 +601,7 @@ set_real_ip_from 193.41.226.117;
 set_real_ip_from 194.15.112.133;
 set_real_ip_from 194.15.113.118;
 set_real_ip_from 194.15.115.212;
+set_real_ip_from 194.15.36.117;
 set_real_ip_from 194.163.157.49;
 set_real_ip_from 194.26.192.77;
 set_real_ip_from 194.53.137.156;
@@ -669,7 +669,6 @@ set_real_ip_from 2001:41d0:601:1100::6524;
 set_real_ip_from 2001:41d0:601:1100::71bb;
 set_real_ip_from 2001:41d0:700:10a2::;
 set_real_ip_from 2001:41d0:701:1000::5196;
-set_real_ip_from 2001:41d0:701:1100::57d3;
 set_real_ip_from 2001:41d0:805:d300::2b19:1929;
 set_real_ip_from 2001:41d0:a:5c0::1;
 set_real_ip_from 2001:41d0:a:fe22::1;
@@ -1238,7 +1237,6 @@ set_real_ip_from 2a01:6340:2:501::10;
 set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
-set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
 set_real_ip_from 2a02:4780:2d:ea47::1;
@@ -1663,6 +1661,7 @@ set_real_ip_from 2a12:a800:9:1:193:26:115:43;
 set_real_ip_from 2a12:a800:9:1:193:26:115:61;
 set_real_ip_from 2a12:de40:21:1be4::;
 set_real_ip_from 2c0f:6c0:0:2::6983;
+set_real_ip_from 2c0f:6c0:0:d::d28b;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.184.236.104;
@@ -1697,6 +1696,7 @@ set_real_ip_from 38.135.24.32;
 set_real_ip_from 38.135.24.33;
 set_real_ip_from 38.135.24.72;
 set_real_ip_from 38.135.25.2;
+set_real_ip_from 38.180.204.182;
 set_real_ip_from 38.242.254.131;
 set_real_ip_from 38.97.116.242;
 set_real_ip_from 38.97.116.243;
@@ -1871,7 +1871,6 @@ set_real_ip_from 57.129.91.235;
 set_real_ip_from 5.8.18.46;
 set_real_ip_from 5.8.18.99;
 set_real_ip_from 62.171.137.169;
-set_real_ip_from 62.182.84.146;
 set_real_ip_from 62.72.47.105;
 set_real_ip_from 64.190.76.2;
 set_real_ip_from 64.190.76.3;
@@ -1906,6 +1905,7 @@ set_real_ip_from 80.94.92.92;
 set_real_ip_from 81.16.33.42;
 set_real_ip_from 81.17.28.95;
 set_real_ip_from 81.181.104.22;
+set_real_ip_from 82.118.248.205;
 set_real_ip_from 82.153.138.125;
 set_real_ip_from 82.153.138.241;
 set_real_ip_from 82.221.128.191;
@@ -1915,6 +1915,7 @@ set_real_ip_from 82.29.128.140;
 set_real_ip_from 82.29.153.76;
 set_real_ip_from 83.147.17.190;
 set_real_ip_from 83.217.9.73;
+set_real_ip_from 83.228.94.69;
 set_real_ip_from 83.96.213.63;
 set_real_ip_from 83.97.20.77;
 set_real_ip_from 84.16.224.227;
